# opencv-yolo

./: .gitignore  CMakeLists.txt  inference.cpp  inference.h  main.cpp  stalker.cpp  stalker.h
